--- a/src/app/layout/footer/footer.component.scss
+++ b/src/app/layout/footer/footer.component.scss
@@ -27,6 +27,12 @@
   border-top: 1px solid $color-white;
 }
 
+@media only screen and (max-width: 768px) {
+  .footer {
+    padding-top: 0;
+  }
+}
+
 @media only screen and (max-width: 600px) {
   .col-md-4 {
     text-align: center;
