--- a/src/app/home/about/about.component.scss
+++ b/src/app/home/about/about.component.scss
@@ -14,7 +14,7 @@ img {
   width: 70%;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 768px) {
   .button-container {
     text-align: center;
     margin-bottom: 2rem;
@@ -22,10 +22,8 @@ img {
   .row {
     flex-flow: column-reverse;
   }
-}
-
-@media only screen and (max-width: 768px) {
   img {
     width: 100%;
+    max-height: 400px;
   }
 }
