--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -1,6 +1,7 @@
 .btn-blue {
   //background-color: $color-active;
-  background-image: radial-gradient($color-blue, $color-active);
+  // background-image: radial-gradient($color-blue, $color-active);
+  background-color: $color-blue;
   color: $color-white;
   border-radius: 1rem;
   transition: all 0.2s;
